--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cypress open"
+    "test": "cypress open",
+    "demo-percy": "npx percy exec -- npm test"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,9 @@
   },
   "homepage": "https://github.com/bahmutov/percy-cypress-command-log-example#readme",
   "devDependencies": {
+    "@percy/agent": "0.11.0",
     "@percy/cypress": "2.0.1",
+    "@percy/script": "1.0.0",
     "cypress": "3.4.1"
   }
 }
